// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty set has default marginBottom 1 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "marginBottom": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`set with one item 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "marginBottom": 24,
      "position": "relative",
    }
  }
>
  a
</div>
`;

exports[`set with two items 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "marginBottom": 24,
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "position": "relative",
      }
    }
  >
    a
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": 12,
        "position": "relative",
        "width": 12,
      }
    }
  />
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "position": "relative",
      }
    }
  >
    b
  </div>
</div>
`;

exports[`set with two items and custom spaceBetween 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "marginBottom": 24,
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "position": "relative",
      }
    }
  >
    a
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": 48,
        "position": "relative",
        "width": 48,
      }
    }
  />
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "position": "relative",
      }
    }
  >
    b
  </div>
</div>
`;

exports[`vertical set with one item 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "marginBottom": 24,
      "position": "relative",
    }
  }
>
  a
</div>
`;

exports[`vertical set with two items 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "marginBottom": 24,
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "position": "relative",
      }
    }
  >
    a
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": 24,
        "position": "relative",
        "width": 24,
      }
    }
  />
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "position": "relative",
      }
    }
  >
    b
  </div>
</div>
`;

exports[`vertical set with two items and custom spaceBetween 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "marginBottom": 24,
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "position": "relative",
      }
    }
  >
    a
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": 48,
        "position": "relative",
        "width": 48,
      }
    }
  />
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "position": "relative",
      }
    }
  >
    b
  </div>
</div>
`;
